--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "npx jest",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,9 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
-    "standard": "^16.0.3"
+    "standard": "^16.0.3",
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5"
   },
   "dependencies": {}
 }
