--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "npx jest",
+    "test": "npx jest --passWithNoTests",
     "prepare": "husky install"
   },
   "repository": {
