--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npx jest --watch --silent --verbose --colors",
     "test:staged": "npx jest --passWithNoTests --findRelatedTests ./src --silent",
+    "test:ci": "jest --coverage",
     "prepare": "husky install"
   },
   "repository": {
