--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "npx jest --watch --silent --verbose --colors",
-    "test:unit": "npx jest --passWithNoTests -c ./jest.unit.config.js",
-    "test:integration": "npx jest --passWithNoTests -c ./jest.integration.config.js",
+    "test:unit": "npm test --passWithNoTests -c ./jest.unit.config.js",
+    "test:integration": "npm test --passWithNoTests -c ./jest.integration.config.js",
     "test:staged": "npx jest --passWithNoTests --findRelatedTests ./src --silent",
     "test:ci": "jest --coverage",
     "prepare": "husky install"
