--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "npx jest --watch --silent --verbose --colors",
-    "test:unit": "npm test --passWithNoTests -c ./jest.unit.config.js",
-    "test:integration": "npm test --passWithNoTests -c ./jest.integration.config.js",
-    "test:staged": "npx jest --passWithNoTests --findRelatedTests ./src --silent",
-    "test:ci": "jest --coverage",
+    "test": "npx jest --watch --silent --verbose --colors --bail",
+    "test:unit": "npm test -- --passWithNoTests -c ./jest.unit.config.js",
+    "test:integration": "npm test -- --passWithNoTests -c ./jest.integration.config.js",
+    "test:staged": "npx jest --bail --passWithNoTests --findRelatedTests ./src --silent",
+    "test:ci": "jest --bail --coverage",
     "prepare": "husky install"
   },
   "repository": {
@@ -31,5 +31,8 @@
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/validator": "^13.6.3",
+    "validator": "^13.6.0"
+  }
 }
